--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Githup Repo</title>\
+        <title>Githup Repo</title>
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <header>
